    redundant core from plugins.
  * Remove SyncFB video output plugin, the kernel module needed is no more
    active and thus it's no more usable. If you were using SyncFB somehow,
    please use DirectFB or VIDIX instead.
  * The Xv and XxMC video output plugins now support Xv port selection.
    (XvMC does not, at present.)

xine-lib (1.1.11) unreleased
  * Reworked the plugin directory naming so that external plugins don't have
    to be rebuilt for every release. We now use a naming scheme based on the
    API/ABI versioning, checking older directories - with this release, the
    plugin directory name is 1.19, and if this gets bumped to 1.20 in a
    future release, 1.19 will still be available for external plugins.
    (Any directories not 1.* won't be looked in.)
  * Made the version parsing much more reliable; it wasn't properly coping
    with four-part version numbers. This affects any program whose build
    scripts use xine-lib's automake macros.

xine-lib (1.1.10.1) 2008-02-07
  * Security fixes:
    - Array index vulnerability which may allow remote attackers to execute
      arbitrary code via a crafted FLAC tag, causing a stack buffer overflow.
      (CVE-2008-0486)
  * Fix a RealPlayer codec detection bug.
  * Improve detection of MP3 streams with ID3v2 tags. Don't trust the tag
    size.

xine-lib (1.1.10) 2008-01-26
  * Security fixes:
    - Buffer overflow which allows a remote attacker to execute arbitrary
      code or crash the client program via a crafted ASF header. 
      (Related to CVE-2006-1664)
  * Update Ogg and Annodex mimetypes and extensions.
  * Change the default v4l device paths to /dev/video0 and /dev/radio0.
  * Fix support for subtitles with schemes (e.g. http://), partly broken
    since 1.1.8.
  * Unescape the filename in "#save:". This allows filenames to contain ';'
    etc. without ambiguity, e.g. "#save:foo%3B1.ts" -> "foo;1.ts", but front
    end authors should be careful with xine-lib older than 1.1.10.